test/force-app/main/default/objects/Design_AEP__c/Design_AEP__c.object-meta.xml
<CustomObject>
    <label>Design &amp; AEP</label>
    <nameField>
        <label>Design &amp; AEP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design &amp; AEPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>