test/force-app/main/default/objects/Design_AEP__c/fields/AC_Bos__c.field-meta.xml
<CustomField>
    <fullName>AC_Bos__c</fullName>
    <label>AC Bos ($)</label>
    <summarizedField>Equipment_Selection__c.Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Equipment_Selection__c.Type__c</field>
        <operation>equals</operation>
        <value>AC Bos</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Selection__c.Design_AEP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>