test/force-app/main/default/objects/Design_AEP__c/fields/Access_Road_Length_LF__c.field-meta.xml
<CustomField>
    <fullName>Access_Road_Length_LF__c</fullName>
    <label>Access Road Length (LF)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>