test/force-app/main/default/objects/Design_AEP__c/fields/DC_AC_Ratio__c.field-meta.xml
<CustomField>
    <fullName>DC_AC_Ratio__c</fullName>
    <formula>System_Size_kW_DC_calc__c /  System_Size_kW_AC_calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DC/AC Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>