test/force-app/main/default/objects/Design_AEP__c/fields/Design_Phase__c.field-meta.xml
<CustomField>
    <fullName>Design_Phase__c</fullName>
    <inlineHelpText>The phase of the project for which this design was intended</inlineHelpText>
    <label>Design Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary</fullName>
            </value>
            <value>
                <fullName>Firm</fullName>
                <label>Firm Bid</label>
            </value>
            <value>
                <fullName>Interconnection</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
                <label>Contract/MIPA</label>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>As Built</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>