test/force-app/main/default/objects/Design_AEP__c/fields/Development_Engineering_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Development_Engineering_Checklist__c</fullName>
    <inlineHelpText>Provide a link to the development engineering checklist (if applicable)</inlineHelpText>
    <label>Development Engineering Checklist</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>