test/force-app/main/default/objects/Design_AEP__c/fields/Drawing_Link__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Link__c</fullName>
    <label>Drawing Link</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>