test/force-app/main/default/objects/Design_AEP__c/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Design_AEPs</relationshipName>
    <type>Lookup</type>
</CustomField>