test/force-app/main/default/objects/Design_AEP__c/fields/Engineering_Equipment_Selections_Cost__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Equipment_Selections_Cost__c</fullName>
    <label>Engineering Equipment Selections Cost</label>
    <summarizedField>Equipment_Selection__c.Cost__c</summarizedField>
    <summaryForeignKey>Equipment_Selection__c.Design_AEP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>