test/force-app/main/default/objects/Design_AEP__c/fields/Fenced_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Fenced_Area_sqft__c</fullName>
    <label>Fenced Area (sqft)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>