test/force-app/main/default/objects/Design_AEP__c/fields/Fencing_Perimeter_LF__c.field-meta.xml
<CustomField>
    <fullName>Fencing_Perimeter_LF__c</fullName>
    <label>Fencing Perimeter (LF)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>