test/force-app/main/default/objects/Design_AEP__c/fields/Foundation_Count__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Count__c</fullName>
    <label>Foundation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>