test/force-app/main/default/objects/Design_AEP__c/fields/LV_Trenching_Distance_LF__c.field-meta.xml
<CustomField>
    <fullName>LV_Trenching_Distance_LF__c</fullName>
    <label>LV Trenching Distance (LF)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>