test/force-app/main/default/objects/Design_AEP__c/fields/Max_Module_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Max_Module_Unit_Cost__c</fullName>
    <label>Max Module Unit Cost</label>
    <summarizedField>Equipment_Selection__c.Cost_Per_Unit__c</summarizedField>
    <summaryFilterItems>
        <field>Equipment_Selection__c.Type__c</field>
        <operation>equals</operation>
        <value>Module</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Selection__c.Design_AEP__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>