test/force-app/main/default/objects/Design_AEP__c/fields/MLPE__c.field-meta.xml
<CustomField>
    <fullName>MLPE__c</fullName>
    <inlineHelpText>Module-level Power Electronics</inlineHelpText>
    <label>MLPE ($)</label>
    <summarizedField>Equipment_Selection__c.Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Equipment_Selection__c.Type__c</field>
        <operation>equals</operation>
        <value>MLPE</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Selection__c.Design_AEP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>