test/force-app/main/default/objects/Design_AEP__c/fields/Modules_Column__c.field-meta.xml
<CustomField>
    <fullName>Modules_Column__c</fullName>
    <formula>of_Modules__c/ Foundation_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modules/Column</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>