test/force-app/main/default/objects/Design_AEP__c/fields/of_Trees_Cleared__c.field-meta.xml
<CustomField>
    <fullName>of_Trees_Cleared__c</fullName>
    <label># of Trees Cleared</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>