test/force-app/main/default/objects/Design_AEP__c/fields/Other_Material__c.field-meta.xml
<CustomField>
    <fullName>Other_Material__c</fullName>
    <formula>Engineering_Equipment_Selections_Cost__c -  Modules_cost__c -  Racking__c -  MLPE__c -  Inverters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Material $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>