test/force-app/main/default/objects/Design_AEP__c/fields/Pad_Count__c.field-meta.xml
<CustomField>
    <fullName>Pad_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Pad Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>