test/force-app/main/default/objects/Design_AEP__c/fields/Process_Builder_Update__c.field-meta.xml
<CustomField>
    <fullName>Process_Builder_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to avoid conflict with the &quot;Reminder to fill in AEP&quot; validation rule</description>
    <label>Process Builder Update</label>
    <type>Checkbox</type>
</CustomField>