test/force-app/main/default/objects/Design_AEP__c/fields/Racking_Type__c.field-meta.xml
<CustomField>
    <fullName>Racking_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Racking Type</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Design &amp; AEPs</relationshipLabel>
    <relationshipName>Design_AEPs</relationshipName>
    <type>Lookup</type>
</CustomField>