test/force-app/main/default/objects/Design_AEP__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scenario</label>
    <referenceTo>Scenario__c</referenceTo>
    <relationshipLabel>Design &amp; AEPs</relationshipLabel>
    <relationshipName>Design_AEPs</relationshipName>
    <type>Lookup</type>
</CustomField>