test/force-app/main/default/objects/Design_AEP__c/fields/Stump_Removal__c.field-meta.xml
<CustomField>
    <fullName>Stump_Removal__c</fullName>
    <label>% Stump Removal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>