test/force-app/main/default/objects/Design_AEP__c/fields/Sum_of_labor_inputs__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_labor_inputs__c</fullName>
    <description>Sum of all input variables that will plug into Labor costs</description>
    <formula>of_Trees_Cleared__c +
Access_Road_Length_LF__c +
Fenced_Area_sqft__c +
Fencing_Perimeter_LF__c +
Foundation_Count__c +
LV_Trenching_Distance_LF__c +
Pad_Count__c +
Tree_Clear_Area_acres__c +
Stump_Removal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of labor inputs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>