test/force-app/main/default/objects/Design_AEP__c/fields/System_Size_kW_AC__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW_AC__c</fullName>
    <label>System Size (kW AC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>