test/force-app/main/default/objects/Design_AEP__c/fields/System_Size_kW_AC_calc__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW_AC_calc__c</fullName>
    <label>System Size (kW AC) calc</label>
    <summarizedField>Equipment_Selection__c.Capacity__c</summarizedField>
    <summaryFilterItems>
        <field>Equipment_Selection__c.Type__c</field>
        <operation>equals</operation>
        <value>Inverter</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Selection__c.Design_AEP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>