test/force-app/main/default/objects/Design_AEP__c/fields/TaskRay_Task__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaskRay Task</label>
    <referenceTo>TASKRAY__Project_Task__c</referenceTo>
    <relationshipLabel>Design &amp; AEPs</relationshipLabel>
    <relationshipName>Design_AEPs</relationshipName>
    <type>Lookup</type>
</CustomField>