test/force-app/main/default/objects/Design_AEP__c/fields/Total_Inverters__c.field-meta.xml
<CustomField>
    <fullName>Total_Inverters__c</fullName>
    <label>Total Inverters</label>
    <summarizedField>Equipment_Selection__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Equipment_Selection__c.Type__c</field>
        <operation>equals</operation>
        <value>Inverter</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Selection__c.Design_AEP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>