test/force-app/main/default/objects/Design_AEP__c/fields/Tree_Clear_Area_acres__c.field-meta.xml
<CustomField>
    <fullName>Tree_Clear_Area_acres__c</fullName>
    <label>Tree Clear Area (acres)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>