test/force-app/main/default/objects/Design_AEP__c/recordTypes/Canopy.recordType-meta.xml
<RecordType>
    <fullName>Canopy</fullName>
    <active>true</active>
    <label>Canopy</label>
</RecordType>