test/force-app/main/default/objects/Design_AEP__c/recordTypes/Groundmount.recordType-meta.xml
<RecordType>
    <fullName>Groundmount</fullName>
    <active>true</active>
    <label>Ground-mount</label>
</RecordType>