test/force-app/main/default/objects/Design_AEP__c/recordTypes/Rooftop.recordType-meta.xml
<RecordType>
    <fullName>Rooftop</fullName>
    <active>true</active>
    <label>Rooftop</label>
</RecordType>