test/force-app/main/default/objects/Design_AEP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System_Size_kW_DC__c</columns>
    <columns>System_Size_kW_AC__c</columns>
    <columns>DC_AC_Ratio__c</columns>
    <columns>AEP_kWh_year__c</columns>
    <columns>Specific_Yield_kWh_kWp__c</columns>
    <columns>Drawing_Link__c</columns>
    <columns>AEP_Link__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>