test/force-app/main/default/objects/Design_AEP__c/listViews/Design_AEP_Templates.listView-meta.xml
<ListView>
    <fullName>Design_AEP_Templates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Template</value>
    </filters>
    <label>Design &amp; AEP Templates</label>
</ListView>